plugins {
    id 'java'
    id 'application' // ДОБАВЬ ВОТ ЭТУ СТРОКУ
    id 'com.gradleup.shadow' version "8.3.0"
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    maven { url 'https://repo.hypera.dev/snapshots/' }
    maven { url 'https://repo.lucko.me/' }
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
    mavenCentral()
}
application {
    mainClass = 'org.example.Main'
}
dependencies {
    implementation('net.minestom:minestom:2026.04.13-1.21.11')
    implementation("dev.lu15:spark-minestom:1.10-SNAPSHOT")

    implementation 'de.articdive:jnoise-pipeline:4.0.0'
    implementation 'org.reflections:reflections:0.10.2'
    implementation 'org.xerial:sqlite-jdbc:3.45.2.0'
    implementation 'com.zaxxer:HikariCP:5.1.0'

}
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

tasks {
    jar {
        manifest {
            attributes["Main-Class"] = "org.example.Main" // поменяй на свой main класс
        }
    }

    build {
        dependsOn(shadowJar)
    }

    shadowJar {
        mergeServiceFiles()
        archiveClassifier.set("")
    }
}

test {
    useJUnitPlatform()
}
tasks.withType(JavaExec).configureEach {
    jvmArgs += [
            '--enable-native-access=ALL-UNNAMED',
            '-Dorg.slf4j.simpleLogger.defaultLogLevel=info'
    ]
}